Stop trusting dependencies to not break their packages with minor updates

--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "graceful-fs": "^4.2.4"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "del": "^6.0.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-debug": "^3.2.0",
-    "gulp-typescript": "^5.0.1",
-    "gulp-util": "^3.0.8",
-    "merge2": "^1.4.1",
-    "typescript": "^4.3.2",
-    "webpack": "^5.38.1",
-    "webpack-stream": "^6.1.2",
-    "yargs": "^17.0.1"
+    "browser-sync": "2.26.14",
+    "del": "^.0.0",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-dart-sass": "1.0.2",
+    "gulp-debug": "3.2.0",
+    "gulp-typescript": "5.0.1",
+    "gulp-util": "3.0.8",
+    "merge2": "1.4.1",
+    "typescript": "^.3.2",
+    "webpack": "5.38.1",
+    "webpack-stream": "6.1.2",
+    "yargs": "17.0.1"
   }
 }
